2007-02-09  Dan Williams  <dcbw@redhat.com>

    * nm-applet.conf
        - Raise D-Bus pending call limit to 512

2007-02-08  Dan Williams  <dcbw@redhat.com>

    Patch from Chris Aillon <caillon@redhat.com>

    * src/applet-compat.c
        - (convert_one_entry): Don't attempt to pass empty ESSID paths to GConf
            (RH #216502)

2007-02-03  Dan Williams  <dcbw@redhat.com>

	Patch from:
	Volker Braun <volker.braun@physik.hu-berlin.de>
	Stefan Schmidt <stefan@datenfreihafen.org>

	* src/wireless-security-option.c
		- (wso_wpa_create_phase2_type_model): create model for phase2 type
			menu

	* src/nm-gconf-wso-wpa-eap.c
		- handle phase2 type and read/write from GConf

	* src/wso-wpa-eap.c
		- Add phase2 type UI bits

	* src/applet.glade
		- Phase 2 dialog controls

***** import from NetworkManager module *****