@@ -1,3 +1,10 @@
+2007-02-23  Lorenzo Colitti  <lor@flyingsaucer.colitti.com>
+
+    * src/applet-dbus-info.c: (nmi_dbus_get_key_for_network):
+        - If a wireless network is using 802.1x authentication, return
+	  security information without looking in the keyring.
+	    (bug #411039)
+
 2007-02-09  Dan Williams  <dcbw@redhat.com>
 
     * nm-applet.conf
